# kennisbank

./: .gitattributes  404.html  README.md  cspell.config.yaml  index.html  mkdocs.yml  ospo-nl-dict.txt  package.json  pyproject.toml  run.sh
.github/workflows/: ci-build.yml  publish.yml  spellcheck.yml
best-practices/: index.html
best-practices/DCO/: index.html
best-practices/GitHub/: index.html
best-practices/introductie-oss/: index.html
best-practices/open-source-software-licenties/: index.html
best-practices/project-launch-checklist/: index.html
best-practices/wetgeving/: index.html
bronnen/: index.html
bronnen/nederlands-overzicht/: index.html
bronnen/ondersteunende-organisaties/: index.html
community/: index.html
community/CODE_OF_CONDUCT/: index.html
community/CONTRIBUTING/: index.html
community/LICENSE/: index.html
community/PROJECT_GOVERNANCE/: index.html
community/SUPPORT/: index.html
community/over-ospo-nl/: index.html
docs/: Introductie van Open Source Software en OSPOs.md  Introductie van Open Source en OSPOs  Over_OSPO-NL.md  README.md  SECURITY.MD  nederlands-overzicht.md  wetgeving.md
docs/Best practices/: Developer Certificate of Origin (DCO).md  README.md  Type Open Source Software licenties.md  Type licenties.md  open-source-project-launch-checklist.md
docs/Case Studies/: Belastingdienst.MD
docs/Community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code of Conduct.md  Community.md  README.md  (+2 more)
nieuw-project/: index.html
search/: search_index.json
src/: ospo-nl-logo-green.xcf  ospo-nl-logo-open-source.xcf
(+27 files in other folders)
